<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gantry_msgs</name>
  <version>0.0.0</version>
  <description>The gantry_msgs package</description>

  <maintainer email="thies.lennart.alff@tuhh.de">Thies Lennart Alff</maintainer>
  <license>GPLv2</license>

  <url type="website">hippocampusrobotics.github.io/docs</url>

  <author email="thies.lennart.alff@tuhh.de">Thies Lennart Alff</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
